Changes to ETH styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="[ card__info ] [ flex-row ] [ text-small ]">
       <div class="flex-row">
         <img class="svg-image" src="./images/icon-ethereum.svg" alt="">
-        <p>0.041 ETH</p>
+        <p class="text-primary-200 text-weight-900">0.041 ETH</p>
       </div>
       <div class="flex-row push-right">
         <img class="svg-image" src="./images/icon-clock.svg" alt="">
