Improve accessebility, Add main tag and changed h2 to h1

--- a/index.html
+++ b/index.html
@@ -16,32 +16,34 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <div class="[ card ] [ big-flow ] [ bg-neutral-300 padding-24 br-1 ]">
-    <div class="[ card__image ] [ br-2 ]">
-      <img class="br-2" src="./images/image-equilibrium.jpg" alt="Equilibrium">
-    </div>
-    <div class="[ card__description ] [ flow ]">
-      <h2>Equilibrium #3429</h2>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
-    </div> 
-    <div class="[ card__info ] [ flex-row ] [ text-small ]">
-      <div class="flex-row">
-        <img class="svg-image" src="./images/icon-ethereum.svg" alt="">
-        <p class="text-primary-200 text-weight-900">0.041 ETH</p>
+  <main>
+    <div class="[ card ] [ big-flow ] [ bg-neutral-300 padding-24 br-1 ]">
+      <div class="[ card__image ] [ br-2 ]">
+        <img class="br-2" src="./images/image-equilibrium.jpg" alt="Equilibrium picture">
       </div>
-      <div class="flex-row push-right">
-        <img class="svg-image" src="./images/icon-clock.svg" alt="">
-        <p>3 days left</p>
+      <div class="[ card__description ] [ flow ]">
+        <h1>Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </div> 
+      <div class="[ card__info ] [ flex-row ] [ text-small ]">
+        <div class="flex-row">
+          <img class="svg-image" src="./images/icon-ethereum.svg" alt="">
+          <p class="text-primary-200 text-weight-900">0.041 ETH</p>
+        </div>
+        <div class="flex-row push-right">
+          <img class="svg-image" src="./images/icon-clock.svg" alt="">
+          <p>3 days left</p>
+        </div>
+      </div>
+      <div class="[ card__author ] [ flex-row ] [ border-top padding-top-16 padding-bottom-8 ]">
+        <img class="card__author--avatar" src="./images/image-avatar.png" alt="">
+        <p class="padding-left-10">Creation of <strong>Jules Wyvern</strong></p>
       </div>
     </div>
-    <div class="[ card__author ] [ flex-row ] [ border-top padding-top-16 padding-bottom-8 ]">
-      <img class="card__author--avatar" src="./images/image-avatar.png" alt="">
-      <p class="padding-left-10">Creation of <strong>Jules Wyvern</strong></p>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Paweł Halicki</a>.
     </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Paweł Halicki</a>.
-  </div>
+</main>
 </body>
 </html>
