--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>3 days left</p>
         </div>
       </div>
-      <div class="[ card__author ] [ flex-row ] [ border-top padding-top-16 padding-bottom-8 ]">
+      <div class="[ card__author ] [ flex-row ] [ border-top padding-top-16 padding-bottom-8 text-small text-weight-600 ]">
         <img class="card__author--avatar" src="./images/image-avatar.png" alt="">
         <p class="padding-left-10">Creation of <strong>Jules Wyvern</strong></p>
       </div>
